<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_request">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="message_theme_for_devs">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_for_devs">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="contact">semonsemonich@yandex.ru</string>
    <string name="practicum">https://practicum.yandex.ru/profile/android-developer/?from=catalog</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_lost">Проблемы со связью\n
        \n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="dont_have_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="SomethingWentWrong">Что-то пошло не так.</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="adding_to_playlist_success">Добавлено в плейлист %1$s</string>
    <string name="adding_to_playlist_declined">Трек уже добавлен в плейлист %1$s</string>
    <string name="needed_permission">Нужно разрешение</string>
    <string name="fully_create_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_information_deleted">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="new_playlisst">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track_dialogue">Хотите удалить трек?</string>
    <string name="yes_dialogue">ДА</string>
    <string name="no_dialogue">НЕТ</string>
    <string name="playlist_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_details">Редактировать информацию</string>
    <string name="share">Поделиться</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="edit_playlist_toolbar_text">Редактировать</string>
    <string name="save_text">Сохранить</string>
    <string name="name_of_playlist">Название*</string>
    <string name="empty_playlist_id">Empty Playlist Id</string>
    <string name="text_pattern">text/plain</string>

</resources>