<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/arrowback"
            android:scaleType="centerInside"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Top"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/black_as_fu"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"
                android:layout_gravity="bottom"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/Top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textColor="@color/black_as_fu"
            android:textSize="@dimen/small_text_size"

            android:layout_weight="1"
            />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                android:layout_gravity="bottom"
                android:layout_marginRight="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/Top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_request"
            android:textColor="@color/black_as_fu"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_marginRight="12dp"
            />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/Top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black_as_fu"
            android:textSize="@dimen/small_text_size"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowforward"
            android:layout_marginRight="12dp"
            />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>