<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity"
    android:padding="@dimen/padding_size"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="28dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_size"
                android:layout_weight="1"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:cornerRadius="@dimen/padding_size"
                app:icon="@drawable/icon_lupa"
                app:iconTint="@color/black"
                app:iconPadding="8dp"
                app:iconGravity="textStart"
                android:foreground="?attr/selectableItemBackground"
                />

            <Button
                android:id="@+id/media_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_size"
                android:layout_weight="1"
                android:text="@string/medialibrary"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:cornerRadius="@dimen/padding_size"
                app:icon="@drawable/media"
                app:iconTint="@color/black"
                app:iconPadding="8dp"
                app:iconGravity="textStart"
                android:foreground="?attr/selectableItemBackground"
                />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_size"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:cornerRadius="@dimen/padding_size"
                app:icon="@drawable/settings"
                app:iconTint="@color/black"
                app:iconPadding="8dp"
                app:iconGravity="textStart"
                />






        </LinearLayout>
</LinearLayout>