<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/return_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:padding="4dp"
                        android:src="@drawable/arrowback" />

                </FrameLayout>

                <TextView
                    android:id="@+id/toolbar_text"
                    style="@style/toolbar_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="Новый плейлист"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/playlist_cover"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/dashed_rectangle"
                android:padding="106dp"
                android:src="@drawable/add_photo"
                app:layout_constraintBottom_toTopOf="@id/nameTextInputLayout"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                style="@style/CreatePlaylistEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="33dp"
                android:hint="@string/name_of_playlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_cover">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                style="@style/CreatePlaylistEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="17dp"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/create_playlist_button_background"
        android:enabled="false"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>